confused on math

--- a/Project 3 Calculator/calculator.html
+++ b/Project 3 Calculator/calculator.html
@@ -16,18 +16,18 @@
         <div class="calculator">
             <div class="display-area">
                 <div class="number">
-                    0
+                    0000000000000000
                 </div>
             </div>
             <div class="keys">
                 <div class="key-twice clear"><button>C</button></div>
-                <div class="key delete">
+                <div class="key-number delete">
                     <button>&#8592;</button>
                 </div>
                 <div class="key-math divide">
                     <button>&#247</button>
                 </div>
-                <div class="key-numb seven">
+                <div class="key seven">
                     <button>7</button>
                 </div>
                 <div class="key eight">
