--- a/Project 3 Calculator/calculator.html
+++ b/Project 3 Calculator/calculator.html
@@ -20,11 +20,11 @@
                 </div>
             </div>
             <div class="keys">
-                <div class="key-twice clear"><button>C</button></div>
-                <div class="key-number delete">
+                <div class="key-twice clear key "><button>C</button></div>
+                <div class="key-number delete key ">
                     <button>&#8592;</button>
                 </div>
-                <div class="key-math divide">
+                <div class="key-math divide key">
                     <button>&#247</button>
                 </div>
                 <div class="key seven">
@@ -37,7 +37,7 @@
                     <button>9</button>
                 </div>
 
-                <div class="key-math multi">
+                <div class="key-math multi key">
                     <button>X</button>
                 </div>
                 <div class="key four">
@@ -49,7 +49,7 @@
                 <div class="key six">
                     <button>6</button>
                 </div>
-                <div class="key-math sub">
+                <div class="key-math sub key">
                     <button>-</button>
                 </div>
                 <div class="key one">
@@ -61,13 +61,13 @@
                 <div class="key three">
                     <button>3</button>
                 </div>
-                <div class="key-math plus">
+                <div class="key-math plus key">
                     <button>+</button>
                 </div>
-                <div class="key-threetimes zero">
+                <div class="key-threetimes zero key">
                     <button>0</button>
                 </div>
-                <div class="key-math equal">
+                <div class="key-math equal key">
                     <button>=</button>
                 </div>
 
@@ -82,7 +82,7 @@
     </div>
 
 
-    <script src="calculator.js">
+    <script src="calculator2.js">
     </script>
 </body>
 
