--- a/Project 3 Calculator/calculator.html
+++ b/Project 3 Calculator/calculator.html
@@ -64,7 +64,7 @@
                 <div class="key-math plus key">
                     <button>+</button>
                 </div>
-                <div class="key-threetimes zero key">
+                <div class="key-three-times zero key">
                     <button>0</button>
                 </div>
                 <div class="key-math equal key">
