dog api finally done

--- a/Project 4 Doggo/dogo.html
+++ b/Project 4 Doggo/dogo.html
@@ -14,9 +14,12 @@
         <div class="top">
             <h1>Dog are everyone's BESTFRIENDS</h1>
         </div>
-        <div class="list">
+        <select class="list" name="dogo-name">
+        
+        </select>
+        <button class="add-doggo">add dogo</button>
 
-        </div>
+
         <div class="dog-picture">
 
         </div>
